--- a/index.html
+++ b/index.html
@@ -5,37 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>My Showcase Website</title>
+    <title>Omier's Website</title>
 </head>
 <!-- This is the main body of the website- ALL your content goes AFTER the <body> tag and before the </body> tag -->
 <body>
 
     <!-- The Hero Section -------------------------------------------------------------------------------------- -->
     <section class="hero">
-        <div class="hero-text">My Showcase Website</div>
-    </section>
+        </section>
 
 <!-- Topic one ------------------------------------------------------------------------------------------------- -->
     <!-- The First Topic Section -->
     <section class="topic">
         <!-- the topic title a big bar with text in it -->
         <div class="topic-title">
-            <h1>Image Editing</h1>
+            <h1>Image Creation</h1>
         </div>
         <!-- now a three column grid of images -->
         <div class="topic-content">
             <!-- one "card" which includes an image with a text below it -->
             <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="change this too!">
-                <h2 class="topic-card-text">Placeholder image</h2>
+                <img src="images/Background.jpg" alt="Background image">
+                <h2 class="topic-card-text">Background</h2>
             </div>
             <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="change this too!">
-                <h2 class="topic-card-text">Placeholder image</h2>
+                <img src="images/Penguin Task 2.png" alt="Penguin drawing">
+                <h2 class="topic-card-text">Penguin</h2>
             </div>
             <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="change this too!">
-                <h2 class="topic-card-text">Placeholder image</h2>
+                <img src="images/Pixel Art.png" alt="Pixel art image">
+                <h2 class="topic-card-text">Pixel Art</h2>
             </div>
         </div>
     </section>
@@ -47,7 +46,7 @@
 
     <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
     <footer class="footer">
-        <p>&copy; 2025 My Showcase Website By Student Name</p>
+        <p>&copy; A Super Sigma Website By Omier Ylanan</p>
     </footer>
 
 <!-- The end of the whole page- no more content after this! -->
