--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,32 +15,45 @@
         </section>
 
 <!-- Topic one ------------------------------------------------------------------------------------------------- -->
-        <!-- The First Topic Section -->
-        <section class="topic">
-            <!-- the topic title a big bar with text in it -->
-            <div class="topic-title">
-                <h1>Image Creation</h1>
+    <!-- The First Topic Section -->
+    <section class="topic">
+        <!-- the topic title a big bar with text in it -->
+        <div class="topic-title">
+            <h1>Image Creation</h1>
+        </div>
+        <!-- now a three column grid of images -->
+        <div class="topic-content">
+            <!-- one "card" which includes an image with a text below it -->
+            <div class="topic-card">
+                <img src="images/Background.jpg" alt="Background image">
+                <h2 class="topic-card-text">Background</h2>
             </div>
-            <!-- now a three column grid of images -->
-            <div class="topic-content">
-                <!-- one "card" which includes an image with a text below it -->
-                <div class="topic-card">
-                    <img src="images/Background.jpg" alt="Background image">
-                    <h2 class="topic-card-text">Background</h2>
-                </div>
-                <div class="topic-card">
-                    <img src="images/Penguin Task 2.png" alt="Penguin drawing">
-                    <h2 class="topic-card-text">Penguin</h2>
-                </div>
-                <div class="topic-card">
-                    <img src="images/Pixel Art.png" alt="Pixel art image">
-                    <h2 class="topic-card-text">Pixel Art</h2>
-                </div>
+            <div class="topic-card">
+                <img src="images/Penguin Task 2.png" alt="Penguin drawing">
+                <h2 class="topic-card-text">Penguin</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/Pixel Art.png" alt="Pixel art image">
+                <h2 class="topic-card-text">Pixel Art</h2>
+            </div>
+            <div class="video-card">
+                <video controls>
+                    <source src="images/Stephen Curry Edit.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <h2 class="topic-card-text">Stephen Curry Edit</h2>
+            </div>
+<!-- End of topic one------------------------------------------------------------------------------------------ -->
+
+<!-- Copy and paste the section from above to make your next section -->
+
+
 
     <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
     <footer class="footer">
         <p>&copy; A Super Sigma Website By Omier Ylanan</p>
     </footer>
 
+<!-- The end of the whole page- no more content after this! -->
 </body>
 </html>
