--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>Omier's Website</title>
 </head>
 <!-- This is the main body of the website- ALL your content goes AFTER the <body> tag and before the </body> tag -->
+
 <body>
 
     <!-- The Hero Section -------------------------------------------------------------------------------------- -->
     <section class="hero">
-        </section>
+    </section>
 
-<!-- Topic one ------------------------------------------------------------------------------------------------- -->
+    <!-- Topic one ------------------------------------------------------------------------------------------------- -->
     <!-- The First Topic Section -->
     <section class="topic">
         <!-- the topic title a big bar with text in it -->
@@ -37,23 +38,25 @@
                 <h2 class="topic-card-text">Pixel Art</h2>
             </div>
             <div class="video-card">
-                <video controls>
+                <video class="video-d" controls>
                     <source src="images/Stephen Curry Edit.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h2 class="topic-card-text">Stephen Curry Edit</h2>
             </div>
-<!-- End of topic one------------------------------------------------------------------------------------------ -->
+            <!-- End of topic one------------------------------------------------------------------------------------------ -->
+        </div>
 
-<!-- Copy and paste the section from above to make your next section -->
+        <!-- Copy and paste the section from above to make your next section -->
 
 
 
-    <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
-    <footer class="footer">
-        <p>&copy; A Super Sigma Website By Omier Ylanan</p>
-    </footer>
+        <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
+        <footer class="footer">
+            <p>&copy; A Super Sigma Website By Omier Ylanan</p>
+        </footer>
 
-<!-- The end of the whole page- no more content after this! -->
+        <!-- The end of the whole page- no more content after this! -->
 </body>
+
 </html>
