--- a/index.html
+++ b/index.html
@@ -38,25 +38,22 @@
                 <h2 class="topic-card-text">Pixel Art</h2>
             </div>
             <div class="video-card">
-                <video class="video-d" controls>
+                <video controls>
                     <source src="images/Stephen Curry Edit.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h2 class="topic-card-text">Stephen Curry Edit</h2>
             </div>
-            <!-- End of topic one------------------------------------------------------------------------------------------ -->
         </div>
+    </section>
+    <!-- End of topic one------------------------------------------------------------------------------------------ -->
 
-        <!-- Copy and paste the section from above to make your next section -->
+    <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
+    <footer class="footer">
+        <p>&copy; A Super Sigma Website By Omier Ylanan</p>
+    </footer>
 
-
-
-        <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
-        <footer class="footer">
-            <p>&copy; A Super Sigma Website By Omier Ylanan</p>
-        </footer>
-
-        <!-- The end of the whole page- no more content after this! -->
+    <!-- The end of the whole page- no more content after this! -->
 </body>
 
 </html>
