--- a/index.html
+++ b/index.html
@@ -2,58 +2,61 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
     <title>Omier's Website</title>
 </head>
-<!-- This is the main body of the website- ALL your content goes AFTER the <body> tag and before the </body> tag -->
 
 <body>
-
-    <!-- The Hero Section -------------------------------------------------------------------------------------- -->
+    <!-- The Hero Section -->
     <section class="hero">
     </section>
 
-    <!-- Topic one ------------------------------------------------------------------------------------------------- -->
-    <!-- The First Topic Section -->
+    <!-- Topic one -->
     <section class="topic">
-        <!-- the topic title a big bar with text in it -->
+        <!-- Topic title -->
         <div class="topic-title">
             <h1>Image Creation</h1>
         </div>
-        <!-- now a three column grid of images -->
+
+        <!-- 3-column grid with image cards -->
         <div class="topic-content">
-            <!-- one "card" which includes an image with a text below it -->
             <div class="topic-card">
-                <img src="images/Background.jpg" alt="Background image">
+                <img src="images/Background.jpg" alt="Background image" />
                 <h2 class="topic-card-text">Background</h2>
             </div>
             <div class="topic-card">
-                <img src="images/Penguin Task 2.png" alt="Penguin drawing">
+                <img src="images/Penguin Task 2.png" alt="Penguin drawing" />
                 <h2 class="topic-card-text">Penguin</h2>
             </div>
             <div class="topic-card">
-                <img src="images/Pixel Art.png" alt="Pixel art image">
+                <img src="images/Pixel Art.png" alt="Pixel art image" />
                 <h2 class="topic-card-text">Pixel Art</h2>
             </div>
+        </div>
+
+        <!-- Video container with two videos side-by-side -->
+        <div class="video-container">
             <div class="video-card">
                 <video controls>
-                    <source src="images/Stephen Curry Edit.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
+                    <source src="images/Stephen Curry Edit.mp4" type="video/mp4" />
                 </video>
                 <h2 class="topic-card-text">Stephen Curry Edit</h2>
             </div>
+            <div class="video-card">
+                <video controls>
+                    <source src="images/0618.mp4" type="video/mp4" />
+                </video>
+                <h2 class="topic-card-text">CST</h2>
+            </div>
         </div>
     </section>
-    <!-- End of topic one------------------------------------------------------------------------------------------ -->
 
-    <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
+    <!-- Footer -->
     <footer class="footer">
         <p>&copy; A Super Sigma Website By Omier Ylanan</p>
     </footer>
-
-    <!-- The end of the whole page- no more content after this! -->
 </body>
 
 </html>
