--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Image Creation</h1>
         </div>
 
-        <!-- 3-column grid with image cards -->
+    
         <div class="topic-content">
             <div class="topic-card">
                 <img src="images/Background.jpg" alt="Background image" />
@@ -40,15 +40,15 @@
         <div class="video-container">
             <div class="video-card">
                 <video controls>
-                    <source src="images/Stephen Curry Edit.mp4" type="video/mp4" />
+                    <source src="images/Video Editing.mp4" type="video/mp4" />
                 </video>
-                <h2 class="topic-card-text">Stephen Curry Edit</h2>
+                <h2 class="topic-card-text">Video Editing</h2>
             </div>
             <div class="video-card">
                 <video controls>
-                    <source src="images/0618.mp4" type="video/mp4" />
+                    <source src="images/My Game Walkthrough.mp4" type="video/mp4" />
                 </video>
-                <h2 class="topic-card-text">CST</h2>
+                <h2 class="topic-card-text">My Game Walkthrough</h2>
             </div>
         </div>
     </section>
